<resources>
    <string name="app_name">RussiaBookMaker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="login_title">Connectez-vous</string>
    <string name="login_title_bis">Mêmes identifiants que sur le site</string>
    <string name="subscription_wrong_password">Les deux champs du mot de passe doivent être identiques.</string>
    <string name="currentRankTitle">Votre classement :</string>
    <string name="currentRankValue">1er</string>
    <string name="currentRankButton">Je consulte le classement</string>
    <string name="welcome">Bienvenue sur RussiaBookMaker</string>
    <string name="betsMenu">Matchs</string>
    <string name="matchOfDay">Match du jour</string>
    <string name="topMenu">Top 4</string>
    <string name="rankMenu">Classement</string>
    <string name="line">-</string>
    <string name="ok">Ok</string>
    <string name="error">Erreur</string>
    <string name="betButton">Je parie</string>
    <string name="betMatch">Pariez sur le match</string>
    <string name="betMatchVS">VS</string>
    <string name="matchOfDayTeam1">Equipe 1</string>
    <string name="matchOfDayTeam2">Equipe 2</string>
    <string name="matchOfDayButton">Parier</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Valider</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">username</string>
    <string name="noMatch">Pas de match aujourd\'hui</string>
    <string name="top4Button">Je fais mon Top4</string>
    <string name="logout">Se déconnecter</string>
    <string name="logout_question">Voulez-vous vous déconnecter ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="noTop4">Vous n\'avez pas encore choisi votre top4</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="top4Title">Choisissez une équipe dans chaque colonne</string>
    <string name="top4AlertTitle">Votre top 4 est incomplet</string>
    <string name="top4AlertMessage">Merci de compléter votre top 4.</string>
    <string name="top4Sent">Votre top 4 a été enregistré.</string>
    <string name="top4ServerError">Erreur dans l\'envoi de votre top 4.</string>
    <string name="premier">1er</string>
    <string name="deuxieme">2ème</string>
    <string name="troisieme">3ème</string>
    <string name="quatrieme">4ème</string>
    <string name="newUsername">Nom d\'utilisateur</string>
    <string name="newPassword">Mot de passe</string>
    <string name="newPasswordConfirm">Confirmez votre mot de passe</string>
    <string name="newPasswordHint">entre 4 et 10 caractères</string>
    <string name="validate">Valider</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_global_ranking">GlobalRanking</string>
    <string name="title_activity_bet">BetActivity</string>
    <string name="title_activity_bet_details">BetDetailsActivity</string>
    <string name="title_activity_top4">Top4Activity</string>
    <string name="title_activity_subscription">SubscriptionActivity</string>
</resources>
