<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textBigSize"
        android:id="@+id/bonjourLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:textSize="@dimen/textBigSize"
        android:text="@string/welcome"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchOfDay_container"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

    </LinearLayout>
    <Button
        style="@style/buttonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/betButton"
        android:layout_gravity="center_horizontal"
        android:id="@+id/betButton"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top4_container"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"></LinearLayout>
    <Button
        style="@style/buttonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top4Button"
        android:layout_gravity="center_horizontal"
        android:text="@string/top4Button"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentRank_container"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

    </LinearLayout>
    <Button
        style="@style/buttonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentRankButton"
        android:layout_gravity="center_horizontal"
        android:id="@+id/currentRankButton"/>
</LinearLayout>